# zephyr-spi-target-demo

./: CMakeLists.txt  README.md  justfile  west.yml
.west/: config  west.yml
app/: CMakeLists.txt  prj.conf  proj.conf
app/boards/: spi_esp32s3_devkitc.overlay
app/src/: main.c
modules/spi_test/drivers/: CMakeLists.txt
modules/spi_test/drivers/spi_test/: CMakeLists.txt  Kconfig  spi_esp32_spis.c  test_spi_esp32_spim.c  test_spi_esp32_spim.h
modules/spis_bb/: CMakeLists.txt
modules/spis_bb/drivers/: CMakeLists.txt  Kconfig
modules/spis_bb/drivers/spis_bb/: CMakeLists.txt  Kconfig  spi_bitbang_spis.c
modules/spis_bb/dts/bindings/spi/: zephyr,spi-bitbang-spis.yaml
modules/spis_bitbang/drivers/: CMakeLists.txt
modules/spis_bitbang/drivers/spis_bitbang/: Kconfig  spis_bitbang.c
modules/spis_bitbang/dts/bindings/spi/: custom,spis.yaml
spi_bitbang_app/: CMakeLists.txt  prj.conf
spi_bitbang_app/boards/: spi_esp32s3_devkitc.overlay
spi_bitbang_app/src/: main.c
spi_example_app/: prj.conf
spi_example_app/boards/: spi_esp32s3_devkitc.overlay
spi_example_app/src/: spi_example.c
spi_module_app/src/: main.c
spim_bitbang_tester/: CMakeLists.txt  prj.conf
spim_bitbang_tester/boards/: spi_esp32s3_devkitc.overlay
spim_bitbang_tester/src/: main.c
